<resources>
    <string name="app_name">LabsCM20171</string>
    <string name="nameButtom">Siguiente</string>
    <string name="activityName1">Informacion Personal</string>
    <string name="activityName2">Informacion de Contacto</string>
    <string name="activityName3">Informacion Complementaria</string>
    <string name="name">Nombre</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="sexo">Sexo:</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>

    <string name="pais">País</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="email">E-mail</string>

    <string name="mostrar">Mostrar</string>
    <string name="hobbies">Pasatiempos</string>
    <string name="gradesSchool">Grados de Escolaridad</string>
    <string name="birthDay">Fecha de Nacimiento</string>
    <string name="pick_date">Cambiar</string>
    <string name="read">Leer</string>
    <string name="watchTV">Ver TV</string>
    <string name="dance">Bailar</string>
    <string name="sing">Cantar</string>
    <string name="swim">Nadar</string>

    <string-array name="countries_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El salvador</item>
        <item>Guayana Francesa</item>
        <item>Granada</item>
        <item>Guatemala</item>
        <item>Guayana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>Surinam</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="gradeSchool_array">
        <item>Grados de Escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universidad</item>
        <item>Otro</item>
    </string-array>
</resources>
