<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_personal_info"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityName1"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="21dp"
        android:textSize="30dp"
        android:fontFamily="sans-monospace"
        android:id="@+id/txtInfPer"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInfPer">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:hint="@string/name"/>
    </LinearLayout>
    <Button
        android:text="@string/nameButtom"
        android:fontFamily="serif-monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:id="@+id/personalToContact"
        android:onClick="sendMessage"/>

</RelativeLayout>
