<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr11_20171.lab1.activity.ContactInfo"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityName2"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="21dp"
        android:fontFamily="serif-monospace"
        android:textSize="30dp"
        android:id="@+id/txtConInfo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConInfo"
        android:id="@+id/layoutInfo">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_phone_black_24px"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:fontFamily="serif-monospace"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutInfo"
        android:id="@+id/layoutEmail">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_email_black_24px"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:fontFamily="serif-monospace"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEmail"
        android:id="@+id/layoutPais">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_public_black_24px"/>
        <AutoCompleteTextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pais"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:fontFamily="serif-monospace"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPais"
        android:id="@+id/layoutCiudad">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_location_city_black_24px"/>
        <AutoCompleteTextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:fontFamily="serif-monospace"
            android:textSize="25dp"/>
    </LinearLayout>

    <Button
        android:text="@string/nameButtom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:id="@+id/btnNext"
        android:onClick="showNextActivity"
        android:layout_below="@+id/layoutDir"
        android:fontFamily="serif-monospace"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDir"
        android:layout_below="@+id/layoutCiudad"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/ic_call_split_black_24px"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress|textNoSuggestions"
            android:imeOptions="actionNext"
            android:fontFamily="serif-monospace"
            android:textSize="25dp"/>
    </LinearLayout>

</RelativeLayout>
