<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityName3"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="21dp"
        android:fontFamily="serif-monospace"
        android:textSize="30dp"
        android:id="@+id/txtInfoCom"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:fontFamily="serif-monospace"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkLeer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="serif-monospace"
            android:textSize="20dp"/>

        <RatingBar
            android:id="@+id/ratBarLeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkVerTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/watchTV"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="serif-monospace"
            android:textSize="20dp"/>

        <RatingBar
            android:id="@+id/ratBarVerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="5"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkBailar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dance"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="serif-monospace"
            android:textSize="20dp"/>

        <RatingBar
            android:id="@+id/ratBarBailar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkCantar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sing"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="serif-monospace"
            android:textSize="20dp"/>

        <RatingBar
            android:id="@+id/ratBarCantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="3"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkNadar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swim"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="serif-monospace"
            android:textSize="20dp"/>

        <RatingBar
            android:id="@+id/ratBarNadar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="0"
            android:stepSize="1"
            style="@android:style/Widget.Holo.RatingBar.Indicator"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            android:onClick="onClick"
            android:hyphenationFrequency="normal"
            android:textAlignment="gravity"
            android:focusable="false"
            android:elegantTextHeight="false"
            android:contextClickable="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/textResumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show"
            android:ems="10"
            android:gravity="right"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textIsSelectable="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>
